--- a/index.html
+++ b/index.html
@@ -19,16 +19,20 @@
         .btn:active { transform: translateY(3px); box-shadow: none; }
         .casino-promo { background: #1e1e1e; padding: 20px; border-radius: 15px; margin-top: 30px; border: 1px solid #f1c40f33; }
         .promo-btn { display: block; text-decoration: none; padding: 15px; border-radius: 8px; font-weight: bold; color: white; margin-top: 10px; transition: 0.3s; }
-        .promo-btn:hover { opacity: 0.8; }
         .footer-content { text-align: left; padding: 30px; font-size: 0.85rem; color: #888; max-width: 600px; margin: auto; line-height: 1.6; }
-        .share-btn { background: #333; color: #ccc; border: none; padding: 10px; border-radius: 5px; cursor: pointer; margin-top: 15px; font-size: 0.8rem; }
+        
+        /* New Action Buttons */
+        .share-container { margin-top: 20px; display: flex; justify-content: center; gap: 10px; }
+        .action-btn { background: #333; color: #ccc; border: 1px solid #444; padding: 10px 15px; border-radius: 8px; cursor: pointer; font-size: 0.8rem; font-weight: bold; }
+        .action-btn:hover { background: #444; color: #fff; }
+        .tg-btn { background: #0088cc; color: white; border: none; }
     </style>
 </head>
 <body>
 
 <div class="app-card">
-    <h1 style="color: #fff; font-size: 1.8rem; margin-bottom: 5px;">SNIPER <span style="color:#00ff88">v1.0.4</span></h1>
-    <p style="font-size: 0.8rem; color: #00ff88; margin-bottom: 20px;">● SERVER LIVE & ENCRYPTED</p>
+    <h1 style="color: #fff; font-size: 1.8rem; margin-bottom: 5px;">BACCARAT SNIPER <span style="color:#00ff88">PRO</span></h1>
+    <p style="font-size: 0.8rem; color: #00ff88; margin-bottom: 20px;">● SERVER STATUS: ONLINE (v1.0.4)</p>
 
     <div id="displayBet" class="bet-display">READY</div>
     <div id="displayStake" class="stake-info">MIN BET</div>
@@ -38,25 +42,25 @@
         <button class="btn btn-player" onclick="sendToBrain('P')">PLAYER</button>
     </div>
 
-    <div style="margin-top: 20px;">
-        <button onclick="resetShoe()" style="background:none; border:none; color:#555; cursor:pointer; text-decoration:underline; margin-right: 15px;">Clear History</button>
-        <button class="share-btn" onclick="copyLink()">🔗 Copy App Link</button>
+    <div class="share-container">
+        <button class="action-btn" onclick="resetShoe()">Clear History</button>
+        <button class="action-btn" onclick="copyLink()">🔗 Copy Link</button>
+        <button class="action-btn tg-btn" onclick="shareTelegram()">✈️ Telegram</button>
     </div>
 
     <div class="casino-promo">
-        <h4 style="margin: 0; color: #f1c40f; letter-spacing: 1px;">VERIFIED CASINOS</h4>
-        <p style="font-size: 0.7rem; color: #666; margin-bottom: 10px;">Use these links for 98.2% Algorithm Accuracy</p>
-        <a href="https://your-affiliate-link-here.com" target="_blank" class="promo-btn" style="background: #27ae60;">PLAY AT 22BET (FREE BONUS)</a>
-        <a href="https://your-affiliate-link-here.com" target="_blank" class="promo-btn" style="background: #8e44ad;">PLAY AT 1xBET (FAST WITHDRAW)</a>
+        <h4 style="margin: 0; color: #f1c40f; letter-spacing: 1px;">RECOMMENDED CASINOS</h4>
+        <p style="font-size: 0.7rem; color: #666; margin-bottom: 10px;">High RTP & Verified for Sniper Strategy</p>
+        <a href="YOUR_LINK_HERE" target="_blank" class="promo-btn" style="background: #27ae60;">1xBET: 100% BONUS + FAST PAYOUT</a>
+        <a href="YOUR_LINK_HERE" target="_blank" class="promo-btn" style="background: #8e44ad;">22BET: OFFICIAL SNIPER PARTNER</a>
     </div>
 </div>
 
 <div class="footer-content">
     <hr style="border: 0; border-top: 1px solid #333; margin-bottom: 20px;">
-    <h3>Professional Baccarat Strategy</h3>
-    <p>Baccarat Sniper Pro is a calculation tool designed to assist players in tracking shoe trends. It utilizes a modified D'Alembert progression. Note: This tool is for educational purposes. Results are based on probability, not certainty.</p>
-    <p><strong>Responsible Gaming:</strong> Gambling involves risk. Always bet within your limits. Visit <a href="https://www.begambleaware.org" style="color:#00ff88">BeGambleAware.org</a> if you need help.</p>
-    <p style="text-align:center; margin-top:20px; color:#444;">&copy; 2026 Sniper AI Systems</p>
+    <h3>Mastering the Baccarat Sniper Strategy</h3>
+    <p>This tool utilizes a proprietary algorithm based on the D'Alembert betting system. By analyzing recent patterns, our server calculates the probability of the next outcome.</p>
+    <p><strong>Disclaimer:</strong> Educational purposes only. Gambling involves risk. Visit <a href="https://www.begambleaware.org" style="color:#00ff88">BeGambleAware.org</a> if you need help.</p>
 </div>
 
 <script>
@@ -67,8 +71,7 @@
         history.push(result);
         const display = document.getElementById('displayBet');
         const stakeDisplay = document.getElementById('displayStake');
-        display.innerText = "CALCULATING...";
-        display.style.fontSize = "2rem";
+        display.innerText = "WAIT...";
 
         try {
             const response = await fetch(BRAIN_URL, {
@@ -77,17 +80,15 @@
                 body: JSON.stringify({ history: history, userId: "USER_PRO" })
             });
             const data = await response.json();
-            display.style.fontSize = "3.5rem";
             display.innerText = data.recommendation;
             stakeDisplay.innerText = "STAKE: " + data.stake;
         } catch (error) {
-            display.innerText = "RECONNECTING...";
-            display.style.fontSize = "1.5rem";
+            display.innerText = "OFFLINE";
         }
     }
 
     function resetShoe() {
-        if(confirm("Start new shoe?")) {
+        if(confirm("Reset all data?")) {
             history = [];
             document.getElementById('displayBet').innerText = "READY";
             document.getElementById('displayStake').innerText = "MIN BET";
@@ -95,13 +96,20 @@
     }
 
     function copyLink() {
-        const el = document.createElement('textarea');
-        el.value = window.location.href;
-        document.body.appendChild(el);
-        el.select();
+        const dummy = document.createElement('input');
+        const text = window.location.href;
+        document.body.appendChild(dummy);
+        dummy.value = text;
+        dummy.select();
         document.execCommand('copy');
-        document.body.removeChild(el);
-        alert("Link copied! Share it in Telegram or WhatsApp.");
+        document.body.removeChild(dummy);
+        alert("App link copied to clipboard!");
+    }
+
+    function shareTelegram() {
+        const url = encodeURIComponent(window.location.href);
+        const text = encodeURIComponent("Check out this Baccarat Sniper Tool! 🎰");
+        window.open(`https://t.me/share/url?url=${url}&text=${text}`, '_blank');
     }
 </script>
 </body>
