--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         .footer-content { text-align: left; padding: 30px; font-size: 0.85rem; color: #888; max-width: 600px; margin: auto; line-height: 1.6; }
         
         /* New Action Buttons */
-        .share-container { margin-top: 20px; display: flex; justify-content: center; gap: 10px; }
+        .share-container { margin-top: 20px; display: flex; justify-content: center; gap: 10px; flex-wrap: wrap; }
         .action-btn { background: #333; color: #ccc; border: 1px solid #444; padding: 10px 15px; border-radius: 8px; cursor: pointer; font-size: 0.8rem; font-weight: bold; }
         .action-btn:hover { background: #444; color: #fff; }
         .tg-btn { background: #0088cc; color: white; border: none; }
@@ -51,8 +51,8 @@
     <div class="casino-promo">
         <h4 style="margin: 0; color: #f1c40f; letter-spacing: 1px;">RECOMMENDED CASINOS</h4>
         <p style="font-size: 0.7rem; color: #666; margin-bottom: 10px;">High RTP & Verified for Sniper Strategy</p>
-        <a href="YOUR_LINK_HERE" target="_blank" class="promo-btn" style="background: #27ae60;">1xBET: 100% BONUS + FAST PAYOUT</a>
-        <a href="YOUR_LINK_HERE" target="_blank" class="promo-btn" style="background: #8e44ad;">22BET: OFFICIAL SNIPER PARTNER</a>
+        <a href="#" target="_blank" class="promo-btn" style="background: #27ae60;">1xBET: 100% BONUS + FAST PAYOUT</a>
+        <a href="#" target="_blank" class="promo-btn" style="background: #8e44ad;">22BET: OFFICIAL SNIPER PARTNER</a>
     </div>
 </div>
 
